[project]
name = "qwen3-computer-use"
version = "0.1.0"
description = "Minimal Qwen3 computer-use agent that proxies GUI actions via pyautogui."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.46.0",
    "pyautogui>=0.9.54",
    "mss>=9.0.1",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.0",
]

[[project.authors]]
name = "Computer Use Team"

[tool.uv]
package = true

